# obs-agents-core

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.override.yml  docker-compose.override.yml  docker-compose.test.override.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: build-and-push.yml  run-tests.yml
api/: views.py
apps/hello/: tests.py  urls.py  views.py
apps/hello/templates/hello/: index.html
config/: settings.py  urls.py
nginx/: Dockerfile  nginx.conf
tests/db/: conftest.py  test_database_connection.py
tests/e2e/: conftest.py  test_e2e.py
tests/unit/: conftest.py  test_placeholder.py
